tests/NormalTests/paczka1/fuzzy1/87318697.err
Error in line 1: JpTzzlWFl S548 98,9
Error in line 11: JpTzzlWFl A889 77,5
Error in line 18: JpTzzlWFl S548 51,9
Error in line 16: A381 S548 318,0
Error in line 25: ca1eHOqQ7TV S548 56,1
